# Projects

./: AlarmCounter.circ  CUDP - CopyWorking.circ  CUDP.circ  README.md  SevenSegCase.v  deb.v  pd.v  program.v  programRun.v  re.v
Airplane queueing system/: plane.cpp  welcome.cpp
Analysis of financial time series/: Main.cpp  Max Heap file.txt  Min Heap file.txt  euro-dollar(1).txt
BA_App/: .gitignore  pubspec.yaml
BA_App/android/app/: build.gradle.kts  proguard-rules.pro
BA_App/ios/Runner.xcodeproj/: project.pbxproj
BA_App/lib/: main.dart
BA_App/lib/Models/: models.dart
BA_App/lib/Screens/: mainscreen.dart
BA_App/lib/Widgets/: ba_text.dart  coming_doctor.dart  depart_button.dart  doctor_button.dart  nav.dart  navigation_bar.dart  notescourse_button.dart  text_widget.dart  widget.dart
BA_App/test/: widget_test.dart
BA_App/web/: index.html
Car workshop appointment system/: Q.cpp  Q.h  customer.cpp  customer.h  mechanic.cpp  mechanic.h  person header.h  person.cpp  problem.cpp
Digital-Alarm-Clock/: ClockAlarm.v  alarm.v  clockDivider.v  constrain.txt  counterModN.v  pushButtonTest.v  sy.v
Logic Circuit Simulation/: .gitignore  CMakeLists.txt  LibraryFile.lib  Logic_Gate.cpp  Logic_Gate.h  README.md  circuit.cpp  circuit.h  main.cpp  testOperator.cpp  testOperator.h  test_circuit_1.cir  test_circuit_2.cir  test_circuit_3.cir  test_circuit_3.stim  test_circuit_4.cir  test_circuit_4.stim  test_circuit_5.cir  test_circuit_6.cir  test_circuit_6.stim
PACMAN/: Board.txt  blinky.cpp  fruit.cpp  gamemanager.cpp  lives.cpp  player.cpp  session6.pro  text.h
(+41 files in other folders)
